examples/errors/BadBoolMath.ixx
# INTENTIONALLY BROKEN — do not expect this to run successfully.
#
# This example demonstrates the error raised when boolean values (YES/NO)
# are used in arithmetic operations. IXX does not allow YES or NO in math.
#
# Expected error (runtime):
#   Cannot use YES/NO in arithmetic.

x = YES + 1
say x
